frontend/static-cdn/deploy/manifest.yaml
# Copyright © 2023 sealos.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: v1
kind: Service
metadata:
  name: desktop-local-cdn
  namespace: sealos
  labels:
    app: desktop-local-cdn
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: desktop-local-cdn

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desktop-local-cdn
  namespace: sealos
spec:
  selector:
    matchLabels:
      app: desktop-local-cdn
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: desktop-local-cdn
    spec:
      containers:
        - name: static-cdn
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
          # image: ghcr.io/labring/sealos-desktop-static-cdn:latest
          image: fanux/static-cdn:v0.0.1
          ports:
            - containerPort: 8080
              name: nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_clear_headers "X-Frame-Options:";
  name: cdn-cloud-sealos-io
  namespace: sealos
spec:
  rules:
    - host: cdn.cloud.sealos.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: desktop-local-cdn
                port:
                  number: 8080
  tls:
    - hosts:
        - cdn.cloud.sealos.io
      secretName: wildcard-cloud-sealos-io-cert
